--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
   },
   "dependencies": {
-    "dotenv": "^16.0.0",
-    "express": "~4.16.1",
-    "node-fetch": "2.6.1"
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/node": "^17.0.25",
-    "@types/node-fetch": "^2.6.1",
-    "concurrently": "^7.1.0",
-    "nodemon": "^2.0.15",
-    "typescript": "^4.6.3"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.2",
+    "@types/node-fetch": "^2.6.11",
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.1.3",
+    "typescript": "^5.4.5"
   }
 }
